# homedisplay

./: .gitignore  CMakeLists.txt  Readme.md  fonts.h  main.c  ntp_client.c  ntp_client.h  scd4x.c  scd4x.h  st7789.c  st7789.h
src/: CMakeLists.txt  Ubuntu.c  Ubuntu.h  display.c  display.h  lwipopts.h  main.c  ntp_client.c  ntp_client.h  peripherals.c  peripherals.h  scd4x.c  scd4x.h  st7789.c  st7789.h
test/: Makefile  test.c
